[package]
authors = ["omnect@conplement.de"]
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "modemmanager"
readme = "README.md"
repository = "git@github.com:omnect/modemmanager.git"
version = "0.1.0"

[dependencies]
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
zbus = "3.14"
modemmanager-sys = { git = "ssh://git@github.com/omnect/modemmanager-sys.git", features = ["zbus"], branch = "review" }

[features]
ModemManager-1_20 = []
default = [ "ModemManager-1_20" ]
