[package]
authors = ["omnect@conplement.de"]
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "modemmanager"
readme = "README.md"
repository = "git@github.com:omnect/modemmanager.git"
version = "0.3.3"

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
zbus = "4.4"
modemmanager-sys = { git = "https://github.com/omnect/modemmanager-sys.git", features = ["zbus"], tag = "0.1.3" }

[features]
ModemManager-1_20 = []
default = [ "ModemManager-1_20" ]
